<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ctec.sortingandsearching.SortActivity" >

    <RelativeLayout
        android:id="@+id/buttonLayout"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_alignRight="@+id/scrollView1" >

        <Button
            android:id="@+id/scrambleButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/scramble"
            android:textSize="10dp" />

        <Button
            android:id="@+id/quickSort"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/scrambleButton"
            android:text="@string/quicksort"
            android:textSize="10dp" />

        <Button
            android:id="@+id/selectSort"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/quickSort"
            android:text="@string/selectsort"
            android:textSize="10dp" />

        <Button
            android:id="@+id/searchButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/quickSort"
            android:text="@string/search"
            android:textSize="10dp" />

        <Button
            android:id="@+id/displayButton"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/scrambleButton"
            android:layout_toRightOf="@+id/scrambleButton"
            android:text="@string/display"
            android:textSize="10dp" />

        <Button
            android:id="@+id/update"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/quickSort"
            android:layout_toRightOf="@+id/quickSort"
            android:text="update"
            android:textSize="10dp" />

        <CheckBox
            android:id="@+id/Integers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/searchButton"
            android:text="Integers" />

        <CheckBox
            android:id="@+id/Weapons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/displayButton"
            android:layout_alignBottom="@+id/displayButton"
            android:layout_toRightOf="@+id/update"
            android:text="Weapon" />

        <CheckBox
            android:id="@+id/Words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/update"
            android:layout_alignBottom="@+id/update"
            android:layout_alignLeft="@+id/Weapons"
            android:layout_toRightOf="@id/update"
            android:text="Words" />

        <CheckBox
            android:id="@+id/Doubles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/Integers"
            android:text="Doubles" />

        <CheckBox
            android:id="@+id/RPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/Weapons"
            android:layout_toLeftOf="@+id/intSize"
            android:layout_toRightOf="@id/Weapons"
            android:text="RPS" />

        <CheckBox
            android:id="@+id/unused"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/RPS"
            android:layout_below="@+id/Weapons"
            android:layout_toRightOf="@id/Words"
            android:text="Unused" />

        <EditText
            android:id="@+id/intSize"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/Doubles"
            android:ems="10"
            android:hint="int size"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/doubleSize"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/unused"
            android:ems="10"
            android:hint="dble size"
            android:inputType="number" />

        <EditText
            android:id="@+id/intRandomization"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/intSize"
            android:layout_alignTop="@+id/displayButton"
            android:ems="10"
            android:hint="int rando"
            android:inputType="number" />

        <EditText
            android:id="@+id/wordsSize"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/intSize"
            android:ems="10"
            android:hint="word size"
            android:inputType="number" />

        <EditText
            android:id="@+id/weaponsSize"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/doubleSize"
            android:ems="10"
            android:hint="wep size"
            android:inputType="number" />

        <EditText
            android:id="@+id/unusedSize"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wordsSize"
            android:layout_below="@+id/Doubles"
            android:ems="10"
            android:hint="unused"
            android:inputType="number" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" 
        android:layout_below="@+id/buttonLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/whereNumbersGo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="This is where numbers go!"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>